# Visual_to_Grid

./: .gitignore  README.md  README_ja.md  analyze_gridness.py  experiment.py  input_pipeline.py  main.py  model.py  pyproject.toml  torus.py  utils.py  visualize_results.py
configs/: linear_mlp_scale10.py  linear_scale10.py  linear_scale15.py  linear_scale5.py  linear_siren_fixed_single_scale10.py  linear_siren_scale10.py  linear_siren_squared_distance_scale10.py  linear_siren_theoretical_scale10.py  nonlinear1_relu.py  nonlinear1_tanh.py  nonlinear2_additive.py  siren.py  siren_scale10.py
