[project]
name = "grid-cell-conformal-isometry"
version = "0.1.0"
requires-python = ">=3.9,<3.10"

dependencies = [
    "absl-py",
    "imageio",
    "matplotlib<3.8",
    "ml-collections",
    "opencv-python",
    "scipy<1.12",
    "torch==1.10.1",
    "torchvision==0.11.2",
    "torchaudio==0.10.1",
]

[dependency-groups]
dev = [
    "pip>=26.0.1",
    "setuptools<81",
    "wheel>=0.47.0",
]
