[project]
name = "grid-cell-conformal-isometry"
version = "0.2.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "absl-py",
    "matplotlib==3.11.1",
    "ml-collections",
    "scipy<1.12",
    "torch==2.13.0",
]

[dependency-groups]
dev = [
    "pip>=26.0.1",
    "setuptools<81",
    "wheel>=0.47.0",
]
